; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_char16_strlen.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_char16_strlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @char16_strlen(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  store i64 0, i64* %3, align 8
  %4 = load i64*, i64** %2, align 8
  %5 = call i32 @assert(i64* %4)
  br label %6

6:                                                ; preds = %10, %1
  %7 = load i64*, i64** %2, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %6
  %11 = load i64, i64* %3, align 8
  %12 = add i64 %11, 1
  store i64 %12, i64* %3, align 8
  %13 = load i64*, i64** %2, align 8
  %14 = getelementptr inbounds i64, i64* %13, i32 1
  store i64* %14, i64** %2, align 8
  br label %6

15:                                               ; preds = %6
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}

declare dso_local i32 @assert(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
